--- a/src/components/enter/enter.styles.scss
+++ b/src/components/enter/enter.styles.scss
@@ -2,8 +2,10 @@
 	opacity: 0;
 	width: 100%;
 	animation-fill-mode: forwards;
+	transition: all 300ms ease-out;
 
 	&.fade-up {
+		opacity: 1;
 		animation: fade-up 600ms ease-out forwards;
 
 		@keyframes fade-up {
