--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,10 @@ a {
   &:hover {
     color: var(--color4);
   }
+
+  @media screen and (max-width: 1180px) {
+    font-size: 1.2em;
+  }
 }
 
 .App {
