--- a/src/pages/work/work.styles.scss
+++ b/src/pages/work/work.styles.scss
@@ -17,35 +17,41 @@
 	.work-collection {
 		width: 100%;
 		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-template-rows: repeat(6, 1fr);
+		grid-template-columns: repeat(2, 1fr);
+		grid-template-rows: repeat(10, 1fr);
 		grid-template-areas: 
-			"breathe breathe spent spent"
-			"breathe breathe spent spent"
-			"holder2 holder2 too too"
-			"holder2 holder2 too too"
-			"tele tele holder1 wechat"
-			"tele tele holder1 wechat";
-		grid-column-gap: 0.8em;
-		grid-row-gap: 0.8em;
+			"joe joe"
+			"joe joe"
+			"breathe breathe"
+			"breathe breathe"
+			"spent spent"
+			"spent spent"
+			"too too"
+			"too too"
+			"tele tele"
+			"tele tele"
+			"holder1 wechat"
+			"holder1 wechat";
+		grid-column-gap: 1em;
+		grid-row-gap: 1em;
 		transition: all 300ms ease-out;
 
-		@media screen and (max-width: 575px) {
-			grid-template-columns: repeat(2, 1fr);
-			grid-template-rows: repeat(10, 1fr);
+		@media screen and (min-width: 576px) {
+			grid-template-columns: repeat(4, 1fr);
+			grid-template-rows: repeat(6, 1fr);
 			grid-template-areas: 
-				"breathe breathe"
-				"breathe breathe"
-				"spent spent"
-				"spent spent"
-				"too too"
-				"too too"
-				"tele tele"
-				"tele tele"
-				"holder1 wechat"
-				"holder1 wechat";
-			grid-column-gap: 1em;
-			grid-row-gap: 1em;
+				"joe joe breathe breathe"
+				"joe joe breathe breathe"
+				"spent spent too too"
+				"spent spent too too"
+				"tele tele holder1 wechat"
+				"tele tele holder1 wechat";
+			grid-column-gap: 0.8em;
+			grid-row-gap: 0.8em;
+
+			.holder2 {
+				grid-area: holder2;
+			}
 		}
 
 		&::before {
@@ -64,10 +70,6 @@
 
 		.holder1 {
 			grid-area: holder1;
-		}
-
-		.holder2 {
-			grid-area: holder2;
 		}
 	}
 }
